agregar gateway con matricula

--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -23,3 +23,7 @@ spring:
           uri: lb://ms-product-service
           predicates:
             - Path=/product/**
+        - id: ms-matricula-service
+          uri: lb://ms-matricula-service
+          predicates:
+            - Path=/estudiante/**
