agregar curso a gateway

--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -27,3 +27,8 @@ spring:
           uri: lb://ms-matricula-service
           predicates:
             - Path=/estudiante/**
+        - id: ms-curso-service
+          uri: lb://ms-curso-service
+          predicates:
+            - Path=/curso/**
+
